[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.10"
serde_json = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }